week 2 challenge - Done!

--- a/week_1/challenge.ipynb
+++ b/week_1/challenge.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inputs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -173,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Requirements\n",
+    "### Requirements\n",
     "+ Input the data (help)\n",
     "+ Split the Transaction Code to extract the letters at the start of the transaction code. These identify the bank who processes the transaction (help)\n",
     "+ Rename the new field with the Bank code 'Bank'. \n",
@@ -1109,13 +1117,6 @@
    "source": [
     "data.groupby([\"Bank\", \"Customer Code\"])[\"Value\"].sum().reset_index()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
